Fix margins in hours datalist to prevent unnecessary wrapping

--- a/_sass/sections/_find-us.scss
+++ b/_sass/sections/_find-us.scss
@@ -26,13 +26,17 @@
 			margin: 2em 10%;
 			display: grid;
 			justify-content: center;
-			grid-template-columns: 3fr 1fr;
+			grid-template-columns: 2fr 1fr;
 			grid-row-gap: 1em;
 			grid-column-gap: 1em;
 		}
 
 		dt {
 			font-weight: bold;
+		}
+
+		dd {
+			margin: 0;
 		}
 	}
 
